--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <h1>Data</h1>
+  <h1>Xfinity coding challenge</h1>
+  <h4>Mounica Reddy</h4>
   <button routerLink="process" class="btn btn-primary">Process data</button>
   <br><br>
   <router-outlet></router-outlet>
