feat: implement processed data

--- a/src/app/components/data-process/data-process.component.html
+++ b/src/app/components/data-process/data-process.component.html
@@ -9,7 +9,9 @@
     </tr>
     </thead>
     <tbody>
-
+      <tr *ngFor="let t of tempArr">
+        <td>{{t}}</td>
+      </tr>
     </tbody>
   </table>
 </div>
